objects/Product_Competition__mdt/Product_Competition__mdt.object-meta.xml
<CustomObject>
    <label>Product Competition</label>
    <pluralLabel>Product Competition</pluralLabel>
</CustomObject>