objects/Product_Competition__mdt/fields/PI_03_Detect__c.field-meta.xml
<CustomField>
    <fullName>PI_03_Detect__c</fullName>
    <label>Detect</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Competitor</fullName>
                <default>true</default>
                <label>No Competitor</label>
            </value>
            <value>
                <fullName>1E</fullName>
            </value>
            <value>
                <fullName>BigFix</fullName>
            </value>
            <value>
                <fullName>Carbon Black</fullName>
            </value>
            <value>
                <fullName>Cloud Hash</fullName>
            </value>
            <value>
                <fullName>Countertack</fullName>
            </value>
            <value>
                <fullName>Cybereason</fullName>
            </value>
            <value>
                <fullName>Cylance</fullName>
            </value>
            <value>
                <fullName>Darktrace</fullName>
            </value>
            <value>
                <fullName>Deep Instinct</fullName>
            </value>
            <value>
                <fullName>FireEye</fullName>
            </value>
            <value>
                <fullName>Hexis</fullName>
            </value>
            <value>
                <fullName>McAfee</fullName>
            </value>
            <value>
                <fullName>SentinelOne</fullName>
            </value>
            <value>
                <fullName>Ziften</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>