objects/Product_Competition__mdt/fields/PI_05_Comply__c.field-meta.xml
<CustomField>
    <fullName>PI_05_Comply__c</fullName>
    <label>Comply</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Competitor</fullName>
                <default>true</default>
                <label>No Competitor</label>
            </value>
            <value>
                <fullName>BigFix</fullName>
            </value>
            <value>
                <fullName>Chef</fullName>
            </value>
            <value>
                <fullName>Dell KACE</fullName>
            </value>
            <value>
                <fullName>Puppet</fullName>
            </value>
            <value>
                <fullName>Qualys</fullName>
            </value>
            <value>
                <fullName>Rapid7</fullName>
            </value>
            <value>
                <fullName>Solarwinds</fullName>
            </value>
            <value>
                <fullName>Symantec (Altiris)</fullName>
            </value>
            <value>
                <fullName>Symantec Endpoint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>