objects/Product_Competition__mdt/fields/PI_07_Discover__c.field-meta.xml
<CustomField>
    <fullName>PI_07_Discover__c</fullName>
    <label>Discover</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Competitor</fullName>
                <default>true</default>
                <label>No Competitor</label>
            </value>
            <value>
                <fullName>1E</fullName>
            </value>
            <value>
                <fullName>BigFix</fullName>
            </value>
            <value>
                <fullName>Dell KACE</fullName>
            </value>
            <value>
                <fullName>LANDesk</fullName>
            </value>
            <value>
                <fullName>Lumension</fullName>
            </value>
            <value>
                <fullName>McAfee</fullName>
            </value>
            <value>
                <fullName>McAfee (Active Response)</fullName>
            </value>
            <value>
                <fullName>Microsoft (SCCM)</fullName>
            </value>
            <value>
                <fullName>Symantec (Altiris)</fullName>
            </value>
            <value>
                <fullName>Symantec Endpoint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>