objects/Product_Competition__mdt/fields/PI_08_Integrity_Monitor__c.field-meta.xml
<CustomField>
    <fullName>PI_08_Integrity_Monitor__c</fullName>
    <label>Integrity Monitor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Competitor</fullName>
            </value>
            <value>
                <fullName>Qualys</fullName>
                <default>true</default>
                <label>Qualys</label>
            </value>
            <value>
                <fullName>Rapid7</fullName>
            </value>
            <value>
                <fullName>Solarwinds</fullName>
            </value>
            <value>
                <fullName>Tenable</fullName>
            </value>
            <value>
                <fullName>Tripwire</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>