objects/Product_Competition__mdt/fields/PI_09_Patch__c.field-meta.xml
<CustomField>
    <fullName>PI_09_Patch__c</fullName>
    <label>Patch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Competitor</fullName>
                <default>true</default>
                <label>No Competitor</label>
            </value>
            <value>
                <fullName>BigFix</fullName>
            </value>
            <value>
                <fullName>Dell KACE</fullName>
            </value>
            <value>
                <fullName>LANDesk</fullName>
            </value>
            <value>
                <fullName>Lumension</fullName>
            </value>
            <value>
                <fullName>Microsoft (SCCM)</fullName>
            </value>
            <value>
                <fullName>Symantec (Altiris)</fullName>
            </value>
            <value>
                <fullName>Symantec Endpoint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>