objects/Product_Competition__mdt/fields/PI_10_Protect__c.field-meta.xml
<CustomField>
    <fullName>PI_10_Protect__c</fullName>
    <label>Protect</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Competitor</fullName>
                <default>true</default>
                <label>No Competitor</label>
            </value>
            <value>
                <fullName>BigFix</fullName>
            </value>
            <value>
                <fullName>Bromium</fullName>
            </value>
            <value>
                <fullName>Carbon Black</fullName>
            </value>
            <value>
                <fullName>Countertack</fullName>
            </value>
            <value>
                <fullName>CrowdStrike</fullName>
            </value>
            <value>
                <fullName>Cybereason</fullName>
            </value>
            <value>
                <fullName>Cylance</fullName>
            </value>
            <value>
                <fullName>Darktrace</fullName>
            </value>
            <value>
                <fullName>Deep Instinct</fullName>
            </value>
            <value>
                <fullName>Hexis</fullName>
            </value>
            <value>
                <fullName>McAfee</fullName>
            </value>
            <value>
                <fullName>McAfee (Active Response)</fullName>
            </value>
            <value>
                <fullName>SentinelOne</fullName>
            </value>
            <value>
                <fullName>Ziften</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>